<resources>
    <string name="app_name">moblplus</string>
    <color name="titlebackgroundcolor">#FF0000</color>
    <color name="titletextcolor">#ffffff</color>
    <string name="about_us">مبل پلاس ، طراحی و ساخت مبلمان اداری و منازل با طرح های ترکیه ، ایتالیایی ، ایرانی و برزیلی</string>
    <string name="soal1">چرا در مبل پلاس حساب کاربری بسازم؟</string>
    <string name="soal2">چگونه خرید خود را پیگیری کنم؟</string>
    <string name="javab1">برای خرید و استفاده از طرح های تشویقی نیاز دارید حساب کاربری داشته باشید تا اطلاعات و خریدهای شما ثبت شود.</string>
    <string name="javab2"> با استفاده از کدرهگیری که هنگام پرداخت به شما داده میشود.</string>

    ////////images introduction
    <string name="str_img1">Image1</string>
    <string name="str_img2">Image2</string>
    <string name="str_img3">Image3</string>
    <string name="str_img4">Image4</string>

    <string name="str_btn_start">Start SlideShow</string>
    <string name="str_btn_stop">Stop SlideShow</string>
</resources>
