<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.example.fatemeh_pc.store_application.soal_activity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/id_soal1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:isScrollContainer="true"
            android:text="@string/soal1"
            android:textColor="#ff0000"
            android:textDirection="rtl"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:scrollbars="vertical"
            android:textStyle="bold"
            android:layout_marginTop="10dp"

            />
        <TextView
            android:id="@+id/id_javab1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:isScrollContainer="true"
            android:text="@string/javab1"
            android:textColor="#000000"
            android:textDirection="rtl"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:scrollbars="vertical"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/id_soal2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/soal2"
            android:layout_gravity="center"
            android:textDirection="rtl"
            android:textSize="18sp"
            android:textColor="#ff0000"
            android:textIsSelectable="false"
            android:scrollbars="vertical"
            android:layout_marginTop="20dp"

            />


        <TextView
            android:id="@+id/id_javab2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:isScrollContainer="true"
            android:text="@string/javab2"
            android:textColor="#000000"
            android:textDirection="rtl"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:scrollbars="vertical"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />


     </LinearLayout>
    </ScrollView>
